--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
       </div>
     </div>
   </div>
+  <div id="winModal" class="hidden">
+		<div class="modal-content">
+	    <h1>Congratulations! You win! :D</h1>
+	    <button class="btn btn-info playAgain" onclick="playAgain()">Play again?</button>
+		</div>
+	</div>
+	<div id="loseModal" class="hidden">
+		<div class="modal-content">
+	    <h1>Sorry! You lose! :(</h1>
+	    <button class="btn btn-info playAgain" onclick="playAgain()">Play again?</button>
+		</div>
+	</div>	
   <footer>
     <h6 class="by">Created by: Jeremy Leitmeyer</h6>
   </footer>
